# api-elt

./: .gitignore  LICENSE  README.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  fingrid_pipeline_dataset_285.duckdb  main.py  mypy.ini  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  sample.json  test_main.py
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  etlinrunner.yml  test.yml
tests/: requirementstest.in  requrementstest.txt  test_main.py  test_main_code.py
utils/: sample1.json
